--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
 	"@platforms": ["android", "iPhone", "iPad"],
-	"id": "H55C3860A",/*应用的标识，创建应用时自动生成，勿手动修改*/
+	"id": "H51F4EF0F",/*应用的标识，创建应用时自动生成，勿手动修改*/
 	"name": "heima-chat",/*应用名称，程序桌面图标名称*/
 	"version": {
 		"name": "1.0.0",/*应用版本名称*/
@@ -30,9 +30,7 @@
         "Console": {
             "description": "跟踪调试输出日志"
         },
-        "Contacts": {
-            "description": "访问系统联系人信息"
-        },
+        
         "Device": {
             "description": "访问设备信息"
         },
@@ -76,9 +74,7 @@
             "description": "文件压缩与解压缩"
         },
         
-        "Maps": {
-            "description": "管理地图插件"
-        },
+        
         
         "Webview":{
         	"description": "窗口管理"
@@ -91,7 +87,7 @@
         },
         "NativeObj":{
         	"description": "原生对象"
-        },"Barcode":{},"Push":{}
+        },"Barcode":{}
 	},
 	"plus": {
 		"splashscreen": {
@@ -114,7 +110,7 @@
 				"keystore": "",/*Android应用打包使用的密钥库文件*/
 				"password": "",/*Android应用打包使用密钥库中证书的密码*/
 				"aliasname": "",/*Android应用打包使用密钥库中证书的别名*/
-				"permissions": ["<uses-permission android:name=\"android.permission.READ_CONTACTS\"/>","<uses-permission android:name=\"android.permission.MOUNT_UNMOUNT_FILESYSTEMS\"/>","<uses-permission android:name=\"android.permission.VIBRATE\"/>","<uses-permission android:name=\"android.permission.READ_LOGS\"/>","<uses-permission android:name=\"android.permission.ACCESS_WIFI_STATE\"/>","<uses-feature android:name=\"android.hardware.camera.autofocus\"/>","<uses-permission android:name=\"android.permission.WRITE_CONTACTS\"/>","<uses-permission android:name=\"android.permission.ACCESS_NETWORK_STATE\"/>","<uses-permission android:name=\"com.android.launcher.permission.UNINSTALL_SHORTCUT\"/>","<uses-permission android:name=\"android.permission.CAMERA\"/>","<uses-permission android:name=\"android.permission.GET_ACCOUNTS\"/>","<uses-permission android:name=\"com.android.launcher.permission.INSTALL_SHORTCUT\"/>","<uses-permission android:name=\"android.permission.INTERNET\"/>","<uses-permission android:name=\"android.permission.READ_PHONE_STATE\"/>","<uses-permission android:name=\"android.permission.CHANGE_WIFI_STATE\"/>","<uses-permission android:name=\"android.permission.WAKE_LOCK\"/>","<uses-permission android:name=\"android.permission.CALL_PHONE\"/>","<uses-permission android:name=\"android.permission.FLASHLIGHT\"/>","<uses-permission android:name=\"android.permission.ACCESS_COARSE_LOCATION\"/>","<uses-feature android:name=\"android.hardware.camera\"/>","<uses-permission android:name=\"android.permission.ACCESS_FINE_LOCATION\"/>","<uses-permission android:name=\"android.permission.WRITE_EXTERNAL_STORAGE\"/>","<uses-permission android:name=\"android.permission.WRITE_SETTINGS\"/>"]
+				"permissions": ["<uses-permission android:name=\"android.permission.ACCESS_SURFACE_FLINGER\"/>","<uses-permission android:name=\"android.permission.BLUETOOTH_PRIVILEGED\"/>","<uses-permission android:name=\"android.permission.BROADCAST_PACKAGE_REMOVED\"/>","<uses-permission android:name=\"android.permission.ACCESS_CHECKIN_PROPERTIES\"/>","<uses-permission android:name=\"android.permission.ADD_VOICEMAIL\"/>","<uses-permission android:name=\"android.permission.CAPTURE_VIDEO_OUTPUT\"/>","<uses-permission android:name=\"android.permission.BIND_WALLPAPER\"/>","<uses-permission android:name=\"android.permission.BROADCAST_WAP_PUSH\"/>","<uses-permission android:name=\"android.permission.ACCESS_LOCATION_EXTRA_COMMANDS\"/>","<uses-permission android:name=\"android.permission.BROADCAST_STICKY\"/>","<uses-permission android:name=\"android.permission.CHANGE_CONFIGURATION\"/>","<uses-permission android:name=\"android.permission.BIND_NFC_SERVICE\"/>","<uses-permission android:name=\"android.permission.BIND_REMOTEVIEWS\"/>","<uses-permission android:name=\"android.permission.BIND_VOICE_INTERACTION\"/>","<uses-permission android:name=\"android.permission.CAPTURE_AUDIO_OUTPUT\"/>","<uses-permission android:name=\"android.permission.BIND_PRINT_SERVICE\"/>","<uses-permission android:name=\"android.permission.BRICK\"/>","<uses-permission android:name=\"android.permission.BIND_DEVICE_ADMIN\"/>","<uses-permission android:name=\"android.permission.BIND_CARRIER_MESSAGING_SERVICE\"/>","<uses-permission android:name=\"android.permission.BIND_INPUT_METHOD\"/>","<uses-permission android:name=\"android.permission.BODY_SENSORS\"/>","<uses-permission android:name=\"android.permission.CAPTURE_SECURE_VIDEO_OUTPUT\"/>","<uses-permission android:name=\"android.permission.BIND_VPN_SERVICE\"/>","<uses-permission android:name=\"android.permission.CALL_PRIVILEGED\"/>","<uses-permission android:name=\"android.permission.BIND_DREAM_SERVICE\"/>","<uses-permission android:name=\"com.android.launcher.permission.UNINSTALL_SHORTCUT\"/>","<uses-permission android:name=\"android.permission.BIND_NOTIFICATION_LISTENER_SERVICE\"/>","<uses-permission android:name=\"android.permission.BLUETOOTH\"/>","<uses-permission android:name=\"com.android.launcher.permission.INSTALL_SHORTCUT\"/>","<uses-permission android:name=\"android.permission.BIND_APPWIDGET\"/>","<uses-permission android:name=\"android.permission.BLUETOOTH_ADMIN\"/>","<uses-permission android:name=\"android.permission.AUTHENTICATE_ACCOUNTS\"/>","<uses-permission android:name=\"android.permission.CHANGE_COMPONENT_ENABLED_STATE\"/>","<uses-permission android:name=\"android.permission.ACCOUNT_MANAGER\"/>","<uses-permission android:name=\"android.permission.CHANGE_WIFI_MULTICAST_STATE\"/>","<uses-permission android:name=\"android.permission.BIND_ACCESSIBILITY_SERVICE\"/>","<uses-permission android:name=\"android.permission.BIND_TEXT_SERVICE\"/>","<uses-permission android:name=\"android.permission.BIND_TV_INPUT\"/>","<uses-permission android:name=\"android.permission.BROADCAST_SMS\"/>","<uses-permission android:name=\"android.permission.BATTERY_STATS\"/>"]
 			},
 			"orientation": ["portrait-primary", "portrait-secondary"],/*应用支持的方向，portrait-primary：竖屏正方向；portrait-secondary：竖屏反方向；landscape-primary：横屏正方向；landscape-secondary：横屏反方向*/
 			"icons": {
